--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         trên khắp các tuyến đường dài và ngắn trong cả nước. Với phương châm <strong>“An toàn – Tiện nghi – Đúng giờ”</strong>,
         nhà xe Anh Tuyến không ngừng cải tiến dịch vụ để mang đến cho khách hàng những chuyến đi thoải mái và đáng tin cậy nhất.
       </p>
+      <img src="/images/vf6.jpg" alt="banner" class="w-full h-auto rounded-lg shadow-lg mb-4">
       <p>
         Chúng tôi chuyên cung cấp dịch vụ <strong>xe ghép</strong>, <strong>xe đi tỉnh</strong>, <strong>xe đưa đón tận nơi</strong>
         với hệ thống phương tiện đời mới, ghế ngồi rộng rãi, điều hòa mát lạnh, có sẵn wifi và sạc điện thoại trên xe.
