--- a/index.html
+++ b/index.html
@@ -130,6 +130,41 @@
     </div>
   </div>
 </section>
+<!-- Danh sách tuyến đường -->
+<section class="py-8 bg-white">
+  <div class="container mx-auto px-4">
+    <h2 class="text-2xl font-bold text-center text-green-700 mb-6 uppercase">Tuyến đường phổ biến</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> TAM ĐẢO ⇔ HÀ NỘI
+      </button>
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> TAM DƯƠNG ⇔ HÀ NỘI
+      </button>
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> LẬP THẠCH ⇔ HÀ NỘI
+      </button>
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> SÔNG LÔ ⇔ HÀ NỘI
+      </button>
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> VĨNH TƯỜNG ⇔ HÀ NỘI
+      </button>
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> VĨNH YÊN ⇔ HÀ NỘI
+      </button>
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> YÊN LẠC ⇔ HÀ NỘI
+      </button>
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> BÌNH XUYÊN ⇔ HÀ NỘI
+      </button>
+      <button class="flex items-center justify-center bg-green-500 text-white font-semibold py-3 px-4 rounded-full hover:bg-green-600 transition">
+        <i class="fas fa-map-marker-alt mr-2"></i> PHÚC YÊN ⇔ HÀ NỘI
+      </button>
+    </div>
+  </div>
+</section>
 
   <!-- Danh sách xe -->
  <section class="py-12 bg-white">
